--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,4 @@ navigation: # Navigation links
   - {name: 'Archive', link: '/archive.html'}
   - {name: 'Tag', link: '/tags.html'}
   - {name: 'Contact', link: '/contact.html'}
+theme: jekyll-theme-cayman
