--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ kramdown:
 
 navigation: # Navigation links
   - {name: 'Intelligence', link: '/'}
-  - {name: 'Investment', link: '/invest.html'}
+  - {name: 'Other', link: '/invest.html'}
   - {name: 'Archive', link: '/archive.html'}
   - {name: 'Tag', link: '/tags.html'}
   - {name: 'Contact', link: '/contact.html'}
